Depuración de Tomcat Añado vsftpd y libreoffice. Completo toda la lista de WARs disponibles para la 3.0.1-M2. Independizo de la base de datos